--- a/src/views/users.hbs
+++ b/src/views/users.hbs
@@ -14,7 +14,7 @@
       <input type="submit" value="Отправить" />
     </form>
     <h1>Список пользователей</h1>
-    {{#each user}}
+    {{#each users}}
       <div style="border: 1px solid green; padding: 15px">
         <h3>Username - {{this.username}}</h3>
         <p>Возраст - {{this.age}}</p>
