delete method added

--- a/src/views/users.hbs
+++ b/src/views/users.hbs
@@ -18,9 +18,18 @@
       <div style="border: 1px solid green; padding: 15px">
         <h3>Username - {{this.username}}</h3>
         <p>Возраст - {{this.age}}</p>
-        <button>Удалить</button>
+        <button onclick="removeById({{this.id}})">Удалить</button>
       </div>
     {{/each}}
 
+  <script>
+    function removeById(id) {
+      fetch(`http://localhost:5001/users/remove?id=${id}`, {
+        method: 'DELETE'
+      }).then(() => {
+        window.location.reload();
+      });
+    }
+  </script>
   </body>
 </html>
